--- a/sites/animals.html
+++ b/sites/animals.html
@@ -23,7 +23,7 @@
     <li><a href="/sites/cars.html">Cars</a></li>
     <li><a href="/sites/food.html">Food</a></li>
     <li><a href="/sites/travel.html">Travel</a></li>
-    <li><a href="nature.html">Nature</a></li>
+    <li><a href="/sites/nature.html">Nature</a></li>
     <li><a href="/sites/architecture.html">Architecture</a></li>
     <li><a >Animals</a></li>
     <li><a href="/sites/events.html">Events</a></li>
@@ -68,3 +68,4 @@
 
 </body>
 </html>
+
