--- a/sites/animals.html
+++ b/sites/animals.html
@@ -26,7 +26,7 @@
     <li><a href="/sites/nature.html">Nature</a></li>
     <li><a href="/sites/architecture.html">Architecture</a></li>
     <li><a >Animals</a></li>
-    <li><a href="/sites/events.html">Events</a></li>
+    <li><a href="../sites/events.html">Events</a></li>
   </ul>
 
 </div>
@@ -43,7 +43,7 @@
         <option value="/sites/nature.html">Nature</option>
         <option value="/sites/architecture.html">Architecture</option>
         <option value="/sites/cars.html">cars</option>
-        <option value="/sites/events.html">Events</option>
+        <option value="../sites/events.html">Events</option>
       </select>
     <div class="all-images">
     <img class="all-images-img" src="https://images.pexels.com/photos/66898/elephant-cub-tsavo-kenya-66898.jpeg" onclick="lightBox(this)" width="350px">
@@ -68,4 +68,5 @@
 
 </body>
 </html>
+
 
