--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 <div class="header">
     <h1>Image Gallery</h1>
+    <img src="https://img.icons8.com/ios11/512/FFFFFF/menu.png" alt="menu" class="menu-icon" onclick="side()">
     <div class="menu-list">
       <a class="cat" onclick="scrollHome()">Home</a>
       <a onclick="showCat()" class="cat">Categories</a>
@@ -104,6 +105,15 @@
     <img src="icons/loc-icon.png" width="15px">Address: Coimbatore, TamilNadu India. <br><br>
    <tr> <td><img src="icons/link-icon.png" width="20px"></td><td>Linkedin: <a href="https://www.linkedin.com/in/gowtham8-v" style="text-decoration: none; color: lightblue;">Gowtham</a></td></tr>
 </p>
+</div>
+
+<div class="menu-side">
+  <ul>
+    <li><a class="cat" onclick="scrollHome()">Home</a></li>
+    <li><a onclick="showCat()" class="cat">Categories</a></li>
+    <li><a class="cat" onclick="scrollAbt()">About</a></li>
+    <li><a class="cat" onclick="scrollLast()">Contact</a></li>
+  </ul>
 </div>
 
 
