--- a/sites/animals.html
+++ b/sites/animals.html
@@ -10,6 +10,7 @@
 <body>
   <div class="header">
     <h1>Image Gallery</h1>
+    <img src="https://img.icons8.com/ios11/512/FFFFFF/menu.png" alt="menu" class="menu-icon" onclick="side()">
     <div class="menu-list">
       <a class="cat" onclick="scrollHome()" href="../index.html">Home</a>
       <a onclick="showCat()" class="cat">Categories</a>
@@ -23,7 +24,7 @@
     <li><a href="/sites/cars.html">Cars</a></li>
     <li><a href="/sites/food.html">Food</a></li>
     <li><a href="/sites/travel.html">Travel</a></li>
-    <li><a href="/sites/nature.html">Nature</a></li>
+    <li><a href="nature.html">Nature</a></li>
     <li><a href="/sites/architecture.html">Architecture</a></li>
     <li><a >Animals</a></li>
     <li><a href="../sites/events.html">Events</a></li>
@@ -68,5 +69,3 @@
 
 </body>
 </html>
-
-
