--- a/sites/events.html
+++ b/sites/events.html
@@ -10,6 +10,7 @@
 <body>
   <div class="header">
     <h1>Image Gallery</h1>
+    <img src="https://img.icons8.com/ios11/512/FFFFFF/menu.png" alt="menu" class="menu-icon" onclick="side()">
     <div class="menu-list">
       <a class="cat" onclick="scrollHome()" href="../index.html">Home</a>
       <a onclick="showCat()" class="cat">Categories</a>
