--- a/sites/events.html
+++ b/sites/events.html
@@ -63,6 +63,15 @@
   <button style="background-color: transparent; border: none;" onclick="goway()"><img src="../icons/wrong-icon.png" id="close"></button>
 </div>
 
+<div class="menu-side">
+  <ul>
+    <li><a class="cat" onclick="scrollHome()">Home</a></li>
+    <li><a onclick="showCat()" class="cat">Categories</a></li>
+    <li><a class="cat" onclick="scrollAbt()">About</a></li>
+    <li><a class="cat" onclick="scrollLast()">Contact</a></li>
+  </ul>
+</div>
+
 
 </body>
 </html>
