--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
 
    <center>
     <table>
-      <form action="" method="post">
+      <form method="post" netlify>
         <tr>
           <td><label for="">Name:</label></td>
-          <td><input type="text" style="border-radius: 5px; background-color: darkgray;"></td>
+          <td><input type="text" style="border-radius: 5px; background-color: darkgray;" name="Name"></td>
         </tr>
         <tr>
           <td><label for="">Mail Id:</label></td>
-          <td><input type="email" style="border-radius: 5px; background-color: darkgray;"></td>
+          <td><input type="email" style="border-radius: 5px; background-color: darkgray;" name="Email"></td>
         </tr>
         <tr>
           <td><label for="">Message:</label></td>
-          <td><textarea style="border-radius: 5px; background-color: darkgray;"></textarea></td>
+          <td><textarea style="border-radius: 5px; background-color: darkgray;" name="Message"></textarea></td>
         </tr>
         <tr>
-          <td><button type="submit" style="border-radius: 5px; padding: 6px; background-color: cadetblue;" onclick="sub(event)">Submit</button></td>
+          <td><button type="submit" style="border-radius: 5px; padding: 6px; background-color: cadetblue;" >Submit</button></td>
         </tr>
       </form>
     </table>
